--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <img id="logo-img" src="./logo/logo.png" alt="Safe-walk Logo">
+            <img id="logo-img" src="/logo/logo.png" alt="Safe-walk Logo">
         </div>
         <nav>
             <div class="hamburger">
