--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img id="hero-img" src="./logo/Screenshot 2025-04-13 at 6.56.08 PM.png"
+                <img id="hero-img" src="/logo/Screenshot 2025-04-13 at 6.56.08 PM.png"
                     alt="Women walking safely together">
             </div>
         </section>
